feat: 添加响应方式的复选框功能

--- a/static/styles.css
+++ b/static/styles.css
@@ -69,3 +69,11 @@ h1 {
     color: #000;
     overflow: scroll;
 }
+
+.checkbox-container {
+    text-align: right;
+}
+
+#isStream {
+    margin-bottom: 10px;
+}
