--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,10 @@
     <section class="left">
       <div class="tip">一键生成小红书文案</div>
       <textarea class="input" name="input" id="input" placeholder="请输入关键词"></textarea>
+      <div class="checkbox-container">
+        <input type="checkbox" id="isStream" name="isStream">
+        <label for="isStream">流式响应</label>
+      </div>
       <div class="generate" id="generate">生成文案</div>
     </section>
     <section class="right">
