refactor: 调整请求静态资源文件的URL

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
+  <link href="/static/styles.css" rel="stylesheet">
   <title>小红书文案生成器</title>
 </head>
 
@@ -26,7 +26,7 @@
       </div>
     </section>
   </div>
-  <script src="{{ url_for('static', path='/index.js') }}"></script>
+  <script src="static/index.js"></script>
 </body>
 
 </html>
