feat: 默认选中流式响应

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <div class="tip">一键生成小红书文案</div>
         <textarea class="input" name="input" id="input" placeholder="请输入关键词"></textarea>
         <div class="checkbox-container">
-          <input type="checkbox" id="isStream" name="isStream" />
+          <input type="checkbox" id="isStream" name="isStream" checked />
           <label for="isStream">流式响应</label>
         </div>
         <div class="generate" id="generate">生成文案</div>
